--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.jiechic.library:xUtils:2.6.14'
+    compile 'com.alibaba:fastjson:1.2.13'
 }
