sm  me---设置界面跳转成功

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity.GuidePagerActivity" />
+        <activity android:name=".Activity.LoginActivity" />
 
-        <activity
-            android:name=".Activity.LoginActivity"
-            ></activity>
+        <activity android:name=".Activity.Mine_Setting_Activity"></activity>
     </application>
 
 </manifest>
