--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     compile files('libs/SocialSDK_yixin_2.jar')
     compile files('libs/SocialSDK_ynote.jar')
     compile files('libs/umeng_social_sdk.jar')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
