--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
         <!-- 友盟AppKey， 需要替换成你自己的 -->
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="577f4c8b67e58eb25c001f90"></meta-data>
+            android:value="577f4c8b67e58eb25c001f90" />
         <!-- *************************    分享相关的注册 START **************************** -->
         <!-- 分享内容编辑页 -->
         <activity
@@ -59,7 +59,7 @@
             android:launchMode="singleTask"
             android:noHistory="true"
             android:theme="@style/Theme.UMDialog"
-            android:windowSoftInputMode="stateVisible|adjustResize"></activity>
+            android:windowSoftInputMode="stateVisible|adjustResize" />
 
         <!-- 腾讯SSO授权的Activity注册 -->
         <activity
@@ -119,7 +119,8 @@
         <uses-library android:name="android.test.runner" />
 
         <activity android:name=".Activity.SearchActivity" />
-        <activity android:name=".Activity.MessageActivity"></activity>
+        <activity android:name=".Activity.MessageActivity" />
+        <activity android:name=".Activity.LoginSuccessActivity"></activity>
     </application>
 
 </manifest>
