--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
     useLibrary 'org.apache.http.legacy'
+//    sourceSets.main{
+//        jniLibs.srcDirs=['libs']
+//    }
 
     defaultConfig {
         applicationId "com.example.beautydress"
@@ -62,4 +65,5 @@ dependencies {
     compile files('libs/SocialSDK_yixin_2.jar')
     compile files('libs/SocialSDK_ynote.jar')
     compile files('libs/umeng_social_sdk.jar')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
