--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.beautydress">
 
+    <meta-data
+        android:name="com.example.beautydress.view.CustomCachingGlideModule"
+        android:value="GlideModule" />
+
+
+    <!-- 屏幕适配设置 -->
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
+    <!-- 权限设置 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -16,7 +30,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <!-- renren sso Permission for Unit Test -->
+
+
+    <!-- 友盟renren sso Permission for Unit Test -->
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.SET_DEBUG_APP" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -45,12 +61,16 @@
         <activity
             android:name=".Activity.LoginActivity"
             android:configChanges="orientation|keyboard" />
+        <activity android:name=".Activity.RegisterActivity"/>
         <activity android:name=".Activity.Mine_Setting_Activity" />
         <activity android:name=".Activity.ShowActivity" />
+
+
+
         <!-- 友盟AppKey， 需要替换成你自己的 -->
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="577f4c8b67e58eb25c001f90"></meta-data>
+            android:value="577f4c8b67e58eb25c001f90" />
         <!-- *************************    分享相关的注册 START **************************** -->
         <!-- 分享内容编辑页 -->
         <activity
@@ -59,7 +79,7 @@
             android:launchMode="singleTask"
             android:noHistory="true"
             android:theme="@style/Theme.UMDialog"
-            android:windowSoftInputMode="stateVisible|adjustResize"></activity>
+            android:windowSoftInputMode="stateVisible|adjustResize" />
 
         <!-- 腾讯SSO授权的Activity注册 -->
         <activity
@@ -119,7 +139,8 @@
         <uses-library android:name="android.test.runner" />
 
         <activity android:name=".Activity.SearchActivity" />
-        <activity android:name=".Activity.MessageActivity"></activity>
+        <activity android:name=".Activity.MessageActivity" />
+
     </application>
 
 </manifest>
